--- a/src/App.css
+++ b/src/App.css
@@ -665,6 +665,9 @@ input.input_field.form-control {
   width: 50%;
   padding: 20px;
 }
+.contact_us_form,.contact_title{
+  padding: 0;
+}
 } /** 980 **/
 
 @media only screen and (max-width:979px) {
@@ -674,18 +677,54 @@ input.input_field.form-control {
 @media only screen and (max-width:767px) {
   .our_scard {
     width: 48%;
-    margin-bottom: 10px;
-    
+    margin-bottom: 10px;   
+}
+.logo_area{
+  width: 100%;
+  justify-content: center;
+}
+.logo_text {
+  text-align: center;
+}
+.menu_area{
+  width: 100%;
+}
+.menu_top {
+  justify-content: center;
+}
+.menu_bottom ul{
+  justify-content: center;
+  padding: 0;
 }
 } /** 650 **/
 
 @media only screen and (max-width:649px) {
   .footer_btm {
-    justify-content: center;
+    justify-content: space-between;
 }
+/* .logo_area{
+  width: 100%;
+  justify-content: center;
+}
+.logo_text {
+  text-align: center;
+}
+.menu_area{
+  width: 100%;
+}
+.menu_top {
+  justify-content: center;
+}
+.menu_bottom ul{
+  justify-content: center;
+  padding: 0;
+} */
 } /** 480 **/
 
 @media only screen and (max-width:479px) {
+  .copyright,.poweredby{
+    width: 100%;
+  }
   .blog_text {
     padding: 0px;
 }
@@ -706,6 +745,9 @@ input.input_field.form-control {
   height: 100%;
   padding: 81px 0px;
   text-align: center;
+}
+.menu_area{
+  display: none;
 }
 } /** 320 **/
 
